Start to implement views for Article:
* Implement i18n URLs;
* Prefixed Lotus own settings;
* Correctly implement basic templates for Article;
* Correctly implement basic views for Article;
* Category views are still to be done and testing views also;

--- a/lotus/templates/lotus/base.html
+++ b/lotus/templates/lotus/base.html
@@ -1,9 +1,7 @@
 {% extends "skeleton.html" %}
 
 {% block content %}
-<div>
-    <h1>Django Blog Lotus</h1>
-
-    {% block app_content %}{% endblock app_content %}
+<div id="lotus-content">
+    {% block lotus_content %}{% endblock lotus_content %}
 </div>
 {% endblock content %}
