--- a/lotus/templates/lotus/category/detail.html
+++ b/lotus/templates/lotus/category/detail.html
@@ -16,11 +16,11 @@
 
     <p>Articles</p>
     <div class="articles">
-        {% comment %}TODO: Usage of get_articles is too much naive, view have to apply
-        publication filtering on this list{% endcomment %}
-        {% for article in category_object.get_articles %}
+        {% for article in object_list %}
         {% include "lotus/article/item.html" with article_object=article %}
         {% endfor %}
+
+        {% include "lotus/pagination.html" %}
     </div>
 </div>
 {% endspaceless %}{% endblock lotus_content %}
