--- a/lotus/templates/lotus/article/item.html
+++ b/lotus/templates/lotus/article/item.html
@@ -1,21 +1,24 @@
 {% load i18n lotus %}{% spaceless %}
-<div class="item {% article_states article_object %}">
-    <h3>
-        <a href="{{ article_object.get_absolute_url }}">{{ article_object.title }}</a>
-    </h3>
+<div class="card mb-3 item {% article_states article_object %}">
+    <div class="row g-0">
+        <div class="col-md-4 cover">{% if article_object.cover %}
+            <img src="{{ article_object.cover.url }}" class="img-fluid rounded-start" alt="">
+        {% endif %}</div>
 
-    <ul class="categories">
-        {% for category in article_object.get_categories %}
-        <li>{{ category.title }}</li>
-        {% endfor %}
-    </ul>
-
-    <p class="publish">{{ article_object.publish_datetime }}</p>
-
-    <p class="cover">{% if article_object.cover %}
-        <img src="{{ article_object.cover.url }}" alt="">
-    {% endif %}</p>
-
-    <div class="introduction">{{ article_object.introduction|safe }}</div>
+        <div class="col-md-8">
+            <div class="card-body">
+                <h2 class="title">
+                    <a href="{{ article_object.get_absolute_url }}">{{ article_object.title }}</a>
+                </h2>
+                <div class="card-text introduction">{{ article_object.introduction|safe }}</div>
+                <div class="card-text mb-2">
+                    {% for category in article_object.get_categories %}
+                    <span class="badge rounded-pill bg-light text-dark">{{ category.title }}</span>
+                    {% endfor %}
+                </div>
+                <p class="card-text"><small class="text-muted publish">{{ article_object.publish_datetime }}</small></p>
+            </div>
+        </div>
+    </div>
 </div>
 {% endspaceless %}
