--- a/lotus/templates/lotus/article/list.html
+++ b/lotus/templates/lotus/article/list.html
@@ -5,12 +5,16 @@
 
 {% block lotus_content %}{% spaceless %}
 <div class="article-list-container">
-    <h2 class="title">{% blocktrans %}Article list{% endblocktrans %}</h2>
+    <h1 class="title border-bottom border-5 py-1 mb-3">{% blocktrans %}Article list{% endblocktrans %}</h1>
 
-    <div class="list">
-        {% for article in article_list %}
-        {% include "lotus/article/item.html" with article_object=article %}
-        {% endfor %}
+    <div class="list container">
+        <div class="row row-cols-2">
+            {% for article in article_list %}
+            <div class="col">
+                {% include "lotus/article/item.html" with article_object=article %}
+            </div>
+            {% endfor %}
+        </div>
     </div>
 
     {% include "lotus/pagination.html" %}
