--- a/lotus/templates/lotus/pagination.html
+++ b/lotus/templates/lotus/pagination.html
@@ -1,9 +1,18 @@
 {% spaceless %}{% if paginator and paginator.num_pages > 1 %}
-    <div class="pagination">
-    {% for page_num in paginator.page_range %}
-        <a href="?page={{ page_num }}"
-           {% if page_num == page_obj.number %} class="active"{% endif %}
-        >{{ page_num }}</a>
-    {% endfor %}
-    </div>
+<nav aria-label="Page navigation example">
+    <ul class="pagination justify-content-center mt-3">
+        {% comment %}<li class="page-item disabled">
+            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+        </li>{% endcomment %}
+        {% for page_num in paginator.page_range %}
+        <li class="page-item{% if page_num == page_obj.number %} active{% endif %}"
+            {% if page_num == page_obj.number %} aria-current="page"{% endif %}>
+            <a class="page-link" href="?page={{ page_num }}">{{ page_num }}</a>
+        </li>
+        {% endfor %}
+        {% comment %}<li class="page-item">
+            <a class="page-link" href="#">Next</a>
+        </li>{% endcomment %}
+    </ul>
+</nav>
 {% endif %}{% endspaceless %}
