Add Article.seo_title, need test coverage

--- a/sandbox/templates/skeleton.html
+++ b/sandbox/templates/skeleton.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block head_title %}Lotus{% endblock head_title %}</title>
+    {% block head_metas %}{% endblock head_metas %}
     {% block head_styles %}
     <link href="/static/css/main.css" rel="stylesheet">
     {% comment %}
