--- a/lotus/templates/lotus/article/detail.html
+++ b/lotus/templates/lotus/article/detail.html
@@ -1,8 +1,10 @@
 {% extends "lotus/base.html" %}
 {% load i18n lotus %}
 
-{% comment %}TODO: This lacks of usage of "lead" field to add header meta description{% endcomment %}
-{% block head_title %}{{ article_object.title }} - {{ block.super }}{% endblock head_title %}
+{% block head_title %}{% if article_object.seo_title %}{{ article_object.seo_title }}{% else %}{{ article_object.title }}{% endif %} - {{ block.super }}{% endblock head_title %}
+{% block head_metas %}
+{% if article_object.lead %}<meta name="description" content="{{ article_object.lead|striptags }}">{% endif %}
+{% endblock head_metas %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="article-detail {% article_states article_object %}">
