Finished metas for article and category details with test coverage, close #19.

--- a/lotus/templates/lotus/article/list.html
+++ b/lotus/templates/lotus/article/list.html
@@ -1,7 +1,7 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
-{% block head_title %}Index - {{ block.super }}{% endblock head_title %}
+{% block head_title %}{% blocktrans %}Article list{% endblocktrans %}{% endblock head_title %}
 
 {% block lotus_content %}{% spaceless %}
 <div class="article-list-container">
