--- a/lotus/templates/lotus/article/detail.html
+++ b/lotus/templates/lotus/article/detail.html
@@ -1,7 +1,7 @@
 {% extends "lotus/base.html" %}
 {% load i18n lotus %}
 
-{% block head_title %}{% if article_object.seo_title %}{{ article_object.seo_title }}{% else %}{{ article_object.title }}{% endif %} - {{ block.super }}{% endblock head_title %}
+{% block head_title %}{% if article_object.seo_title %}{{ article_object.seo_title }}{% else %}{{ article_object.title }}{% endif %}{% endblock head_title %}
 {% block head_metas %}
 {% if article_object.lead %}<meta name="description" content="{{ article_object.lead|striptags }}">{% endif %}
 {% endblock head_metas %}
