--- a/lotus/templates/lotus/category/list.html
+++ b/lotus/templates/lotus/category/list.html
@@ -1,6 +1,8 @@
 {% extends "lotus/base.html" %}
 {% load i18n %}
 
+{% block head_title %}{% blocktrans %}Category list{% endblocktrans %}{% endblock head_title %}
+
 {% block lotus_content %}{% spaceless %}
 <div class="category-list-container">
     <h1 class="title border-bottom border-5 py-1 mb-3">{% blocktrans %}Category list{% endblocktrans %}</h1>
