--- a/scss/main.scss
+++ b/scss/main.scss
@@ -19,3 +19,6 @@
 // deeper mixins)
 @import "./tools/flexbox";
 @import "./tools/spacing";
+
+// Applications components
+@import "./components/article";
