--- a/lotus/templates/lotus/category/detail.html
+++ b/lotus/templates/lotus/category/detail.html
@@ -10,18 +10,21 @@
 <div class="category-detail">
     <h1 class="title">{{ category_object.title }}</h1>
 
-    <p class="cover">{% if category_object.cover %}
-        <img src="{{ category_object.cover.url }}" alt="">
-    {% endif %}</p>
+    <div class="cover bg-light rounded text-center mb-2 p-2">{% if category_object.cover %}
+        <img src="{{ category_object.cover.url }}" class="rounded" alt="">
+    {% endif %}</div>
 
     <div class="description">{{ category_object.description|safe }}</div>
 
     <p>Articles</p>
-    <div class="articles">
-        {% for article in object_list %}
-        {% include "lotus/article/item.html" with article_object=article %}
-        {% endfor %}
-
+    <div class="articles container">
+        <div class="row row-cols-2 g-4">
+            {% for article in object_list %}
+            <div class="col">
+                {% include "lotus/article/item.html" with article_object=article %}
+            </div>
+            {% endfor %}
+        </div>
         {% include "lotus/pagination.html" %}
     </div>
 </div>
