--- a/lotus/templates/lotus/article/partials/siblings.html
+++ b/lotus/templates/lotus/article/partials/siblings.html
@@ -1,7 +1,11 @@
-<ul class="article-siblings list-group list-group-flush">
-{% for article in siblings %}
-    <li class="sibling list-group-item">
-        <a href="{{ article.get_absolute_url }}">{{ article.language }}</a>
-    </li>
-{% endfor %}
-</ul>
+{% spaceless %}
+{% if siblings %}
+    <ul class="article-siblings list-group list-group-flush">
+    {% for article in siblings %}
+        <li class="sibling list-group-item">
+            <a href="{{ article.get_absolute_url }}">{{ article.language }}</a>
+        </li>
+    {% endfor %}
+    </ul>
+{% endif %}
+{% endspaceless %}
