--- a/lotus/templates/lotus/category/partials/siblings.html
+++ b/lotus/templates/lotus/category/partials/siblings.html
@@ -1,7 +1,11 @@
-<ul class="category-siblings list-group list-group-flush">
-{% for category in siblings %}
-    <li class="sibling list-group-item">
-        <a href="{{ category.get_absolute_url }}">{{ category.language }}</a>
-    </li>
-{% endfor %}
-</ul>
+{% spaceless %}
+{% if siblings %}
+    <ul class="category-siblings list-group list-group-flush">
+    {% for category in siblings %}
+        <li class="sibling list-group-item">
+            <a href="{{ category.get_absolute_url }}">{{ category.language }}</a>
+        </li>
+    {% endfor %}
+    </ul>
+{% endif %}
+{% endspaceless %}
